versioned_docs/version-2.0.0/guides/tutorials/how-to-configure-multi-channel-routing.mdx
---
sidebar_position: 2
---

import Image from "@theme/IdealImage";
import GifWrapper from "@site/src/components/GifWrapper";

# How To Configure Multi-Channel Routing

> This how to guide walks you through configuring multi-channel routing for your product notifications with Courier.

Courier makes it easy to set custom routing rules and ensure your user's get exactly the product notification experience you intend.

## Routing in the Send API

The `routing` object allows you to select various channels and decide which ones you want to send messages to.

When the `method` property is defined as `single`, Courier will attempt to the send messages to only one channel. In the example below, it will first attempt SMS and fail since `phone_number` is not included in the user profile. Next, it will attempt to send via email _instead_. If the email is sent successfully, it will not attempt to send a push or chat notification.

```javascript
message: {
      to: {
        email: "example@email.com",
      },
      routing: {
        method: "all",
        channels: ["sms", "email", "push", "chat"],
      },
    },
```

When the `method` property is defined as `all`, Courier will attempt to send messages to all listed channels. In the example below, Courier will send the message via email and SMS. Since the push and chat profile requirements are not completed, it will not be able to send via those channels.

```javascript
to: {
    phone_number: "123456789",
    email: "example@email.com",
},
routing: {
    method: "all",
    channels: ["sms", "email", "push", "chat"],
}
```

Ensure that for all channels listed, the profile requirements are met. You can find information about profile requirements for the provider under [Channels >](https://www.courier.com/docs/guides/providers/).

Learn more about setting up routing in the [API reference](https://www.courier.com/docs/reference/send/message/0) documentation.

![references routing](https://user-images.githubusercontent.com/28051494/195457907-1c547277-a15a-4a81-ace2-c0138e2878f0.png)

## Routing in the Designer

The priority of the channels you select for your notification are arranged in a top-to-bottom hierarchy. To change priority, simply drag and drop your notification channels.

<GifWrapper width={714} height={378}>

![](../../assets/guides/tutorials/reorder-channel-priority.gif)

</GifWrapper>

Courier will attempt to send the notification to the best channel possible, starting from the top and going to the bottom, based on the provided user contact information. You must provide Courier with user's contact information within their [Courier recipient profile](../../reference/profiles/intro.mdx) or via the [Send API](../../reference/send/message.mdx) call itself.

Take, for example, a notification that is designed to send via SMS, Slack or email, in that order of priority:

<Image img={require("../../assets/guides/tutorials/channel-priority-sample.png")} alt="" />

Courier will first attempt to send the notification via SMS. If the recipient has a phone number in their profile, the notification will send via SMS only. If they don't have a phone number, Courier will look for a Slack account. Finally, if they don't have a phone number or slack account, Courier will look for an email address.

You can also choose to 'always send' to a specific channel. In order to do this, select the channel settings and turn on 'Always send to'.

<Image img={require("../../assets/guides/tutorials/channel-settings-always-send-to.png")} alt="" />

Now Courier will always send this notification via email as well as to the best of the other channels.

<Image img={require("../../assets/guides/tutorials/notification-always-send-to.png")} alt="" />

The routing settings created in the designer can always be overridden using the [preferences API](../../reference/user-preferences/introduction.mdx). This will override the hierarchy of the channel rules and send the message only via the Integration specified in the recipient’s [profile](../../reference/profiles/intro.mdx).
